--- a/docs/T1Envíos/consultarguias.api.mdx
+++ b/docs/T1Envíos/consultarguias.api.mdx
@@ -1,7 +1,7 @@
 ---
 id: consultarguias
 title: "Consultar guías"
-description: "Método para consultar guiás generadas el cual recibe el número de registros que desea consultar y el número de pagina."
+description: "Este endpoint permite a los usuarios consultar las guías de envío generadas, proporcionando la opción de paginación y filtrado. Al especificar el número de registros por página y el número de página, junto con parámetros adicionales como fechas, estatus, y mensajería, los usuarios pueden obtener una lista detallada y organizada de las guías generadas, facilitando la gestión y el seguimiento de sus envíos."
 sidebar_label: "Consultar guías"
 hide_title: true
 hide_table_of_contents: true
@@ -41,7 +41,7 @@ import TabItem from "@theme/TabItem";
 
 
 
-Método para consultar guiás generadas el cual recibe el número de registros que desea consultar y el número de pagina.
+Este endpoint permite a los usuarios consultar las guías de envío generadas, proporcionando la opción de paginación y filtrado. Al especificar el número de registros por página y el número de página, junto con parámetros adicionales como fechas, estatus, y mensajería, los usuarios pueden obtener una lista detallada y organizada de las guías generadas, facilitando la gestión y el seguimiento de sus envíos.
 
 <Heading
   id={"request"}
