--- a/docs/T1Envíos/generarguiaapartirdecotizacionprevia.api.mdx
+++ b/docs/T1Envíos/generarguiaapartirdecotizacionprevia.api.mdx
@@ -1,7 +1,7 @@
 ---
 id: generarguiaapartirdecotizacionprevia
 title: "Generar guía"
-description: "Método para la generación de una guía a partir de una cotización."
+description: "Este endpoint permite a los usuarios generar una guía de envío a partir de una cotización previamente obtenida. Al proporcionar el token de cotización y la información requerida del remitente y destinatario, el sistema generará una guía válida para el envío, la cual puede incluir opciones como recolección y notificaciones. Esta guía es esencial para la logística del envío y proporciona un seguimiento detallado del paquete desde su origen hasta su destino."
 sidebar_label: "Generar guía"
 hide_title: true
 hide_table_of_contents: true
@@ -36,7 +36,7 @@ import TabItem from "@theme/TabItem";
   path={"/t1/pgs/generar-guia-mensajeria/{tokenCotizacion}"}
 ></MethodEndpoint>
 
-Método para la generación de una guía a partir de una cotización.
+Este endpoint permite a los usuarios generar una guía de envío a partir de una cotización previamente obtenida. Al proporcionar el token de cotización y la información requerida del remitente y destinatario, el sistema generará una guía válida para el envío, la cual puede incluir opciones como recolección y notificaciones. Esta guía es esencial para la logística del envío y proporciona un seguimiento detallado del paquete desde su origen hasta su destino.
 
 <Heading
   id={"request"}
