--- a/docs/T1Envíos/consulta-saldo.api.mdx
+++ b/docs/T1Envíos/consulta-saldo.api.mdx
@@ -1,7 +1,7 @@
 ---
 id: consulta-saldo
 title: "Consultar saldo"
-description: "Método para consultar saldo."
+description: "Este endpoint permite a los usuarios consultar el saldo disponible en su cuenta de T1Envios. Al proporcionar la clave del comercio, el sistema devolverá el monto actual del saldo, facilitando la gestión financiera y la planificación de futuros envíos."
 sidebar_label: "Consultar saldo"
 hide_title: true
 hide_table_of_contents: true
@@ -41,7 +41,7 @@ import TabItem from "@theme/TabItem";
 
 
 
-Método para consultar saldo.
+Este endpoint permite a los usuarios consultar el saldo disponible en su cuenta de T1Envios. Al proporcionar la clave del comercio, el sistema devolverá el monto actual del saldo, facilitando la gestión financiera y la planificación de futuros envíos.
 
 <Heading
   id={"request"}
