T1Comercios Docs Catálogos

--- a/docs/T1Comercios/catalogos-y-categorias.info.mdx
+++ b/docs/T1Comercios/catalogos-y-categorias.info.mdx
@@ -2,7 +2,7 @@
 id: catalogos-y-categorias
 title: "Catálogos y Categorías"
 description: "La API de Catálogos y Categorías proporciona funcionalidades para consultar y administrar información relacionada con marcas y categorías de productos en T1Comercios."
-sidebar_label: Introducción
+sidebar_label: Introduction
 sidebar_position: 0
 hide_title: true
 custom_edit_url: null
