--- a/docs/T1Envíos/api-sso-documentacion.info.mdx
+++ b/docs/T1Envíos/api-sso-documentacion.info.mdx
@@ -2,7 +2,7 @@
 id: api-sso-documentacion
 title: "API SSO documentación"
 description: "# 📄 Get started here"
-sidebar_label: Introduction
+sidebar_label: Introducción
 sidebar_position: 0
 hide_title: true
 custom_edit_url: null
