--- a/docs/T1Envíos/t-1-enviosaws.info.mdx
+++ b/docs/T1Envíos/t-1-enviosaws.info.mdx
@@ -2,7 +2,7 @@
 id: t-1-enviosaws
 title: "T1EnviosAWS"
 description: ""
-sidebar_label: Introduction
+sidebar_label: Introducción
 sidebar_position: 0
 hide_title: true
 custom_edit_url: null
